fixed: about us overflow

--- a/styles/components/aboutus.css
+++ b/styles/components/aboutus.css
@@ -66,7 +66,7 @@
   font-size: var(--size-xl);
 }
 
-@media (max-width: 475px) {
+@media (max-width: 768px) {
   .about-us-divider {
     flex-direction: column;
     gap: 1rem;
